### Change Log
**This does not detail anything from any updates prior to this file.
***Only reason this file wasnt made sooner is because im lazu...

## [V2.0.7]
### Changed
- Fixed a StonePlate "Stone Wall" (Softlock issue)
- Updated Mods (FTBQuests Being a bit one!)
- Quests (Tho I update them nearly every update, this fixes some typos i have found and some other strange issues.)
### Added
- IntergratedCrafting
- ChatHeads
- NoChatReports
- E4MC (Allows Lan Worlds to be public, without all the extras of Essentials)
### Removed
- All Recipes for Intergrated Suite (Pending New Production Lines)
### Quest Changes
- Theres a 4x quest that now needs a saw to be completed in kentic age
- Added onto kentic age as well.
- fixed an few missing "OreTags" on some quests
- Blanket added some coin rewards to all existing quests. (At the time of typeing this line atleast)

## [V2.0.6]
### Changed
- Updated a few mods (Notable AE2, and BotanyPots)
- Values for the Sieve's (Turns out im bad at math, who knew!)
- Fixed an issue with Iron Ingot Depot Recipes duping
- Added Tin, Zinc, Copper to the depot nugget conversion
- Fixed Create Shafts not having a working recipe
- Minor Tweaks to create handcrank recipe
- Minor Fixes to create milling recipes
## Added
- Leaky
- Staaaaaaaaaaaack (Stxck)
- Item Filters (I honestly dont know how I missed this tell now... woops)
- InvTweaks/Sorting
- A Inventory Overhaul mod (In Testing)
## Removed

## [V2.0.5]
### Noteice!!!
This is a LARGE update, Users may want to restart due to the major overhaul of the starting progression
### Added
- Ex Deorum/Hammers
- XyCraft
- TreeBarks
- BiomeBeans (For Biome Modification)
- (On Trial) BOP - for builders mostly
### Changed
- Updated Forge/nearly every mod
- Rollback ProbeJS (Probe 7 not done)
- New Default Starter Island, Less stuff, levers new
- Updated IntegratedDynamics Config to disable Rewards
- added rubber trees to the BotanyPots