@@ -1,0 +1,5 @@
+ClientEvents.lang("en_us", (event) => {
+    event.add("create.recipe.heat_requirement.blaze", "Blaze");
+    event.add("create.recipe.heat_requirement.cryotheum", "Cryotheum");
+    event.add("gui.create.jei.category.basin.heat.cryotheum.title", "Need Ice Spikes Biome");
+});
