@@ -1,0 +1,6 @@
+console.info('RefinedStorage: Registering recipes...')
+ServerEvents.recipes(e => {
+
+    e.remove({ mod: 'refinedstorage' })
+
+})//End Of File
